# midicci

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md
src/: CMakeLists.txt
src/midi-ci/core/: CIFactory.cpp  CIRetrieval.cpp  CIRetrieval.hpp  ClientConnection.cpp  MidiCIConstants.cpp  MidiCIConverter.cpp  MidiCIDevice.cpp
src/midi-ci/json/: Json.cpp
src/midi-ci/messages/: Message.cpp  Messenger.cpp
src/midi-ci/profiles/: ObservableProfileList.cpp  ProfileClientFacade.cpp  ProfileHostFacade.cpp  ProfileManager.cpp
src/midi-ci/properties/: CommonRulesPropertyClient.cpp  CommonRulesPropertyHelper.cpp  CommonRulesPropertyMetadata.cpp  MidiCIServicePropertyRules.cpp  ObservablePropertyList.cpp  PropertyChunkManager.cpp  PropertyClientFacade.cpp  PropertyHostFacade.cpp  PropertyManager.cpp
src/midi-ci/ump/: Ump.cpp  UmpRetriever.cpp
src/midicci/: CIFactory.cpp  CIRetrieval.cpp  CMakeLists.txt  ClientConnection.cpp  Json.cpp  Message.cpp  Messenger.cpp  MidiCIConverter.cpp  MidiCIDevice.cpp  ObservableProfileList.cpp  ObservablePropertyList.cpp  ProfileClientFacade.cpp  ProfileHostFacade.cpp  PropertyChunkManager.cpp  PropertyClientFacade.cpp  PropertyCommonConverter.cpp  PropertyHostFacade.cpp  PropertyPartialUpdater.cpp
src/midicci/commonproperties/: CommonRulesPropertyClient.cpp  CommonRulesPropertyHelper.cpp  CommonRulesPropertyMetadata.cpp  CommonRulesPropertyService.cpp  FoundationalResources.cpp  MidiCIServicePropertyRules.cpp  ObservablePropertyList.cpp  PropertyChunkManager.cpp  PropertyClientFacade.cpp  PropertyHostFacade.cpp  StandardProperties.cpp
src/midicci/core/: CIFactory.cpp  CIRetrieval.cpp  ClientConnection.cpp  MidiCIConstants.cpp  MidiCIConverter.cpp  MidiCIDevice.cpp
src/midicci/json_ish/: Json.cpp
src/midicci/messages/: Message.cpp  Messenger.cpp
src/midicci/musicdevice/: MidiCISession.cpp  MidiMachineMessageReporter.cpp  MusicDevice.cpp
src/midicci/profiles/: ObservableProfileList.cpp  ProfileClientFacade.cpp  ProfileHostFacade.cpp
src/midicci/properties/: CommonRulesPropertyClient.cpp  CommonRulesPropertyHelper.cpp  CommonRulesPropertyMetadata.cpp  CommonRulesPropertyService.cpp  MidiCIServicePropertyRules.cpp  ObservablePropertyList.cpp  PropertyChunkManager.cpp  PropertyClientFacade.cpp  PropertyHostFacade.cpp
src/midicci/propertycommonrules/: CommonRulesPropertyClient.cpp  CommonRulesPropertyHelper.cpp  CommonRulesPropertyMetadata.cpp  CommonRulesPropertyService.cpp  MidiCIServicePropertyRules.cpp  ObservablePropertyList.cpp  PropertyClientFacade.cpp  PropertyHostFacade.cpp
src/midicci/ump/: Smf2Clip.cpp  Ump.cpp  UmpFactory.cpp  UmpRetriever.cpp  UmpTranslator.cpp
src/umppi/: CMakeLists.txt  Common.cpp  DeltaTimeComputer.cpp  Midi1Machine.cpp  Midi1Message.cpp  Midi1Music.cpp  Midi1Reader.cpp  Midi1Writer.cpp  Midi2Music.cpp  Midi2Track.cpp  MidiPlayerTimer.cpp  Ump.cpp  UmpFactory.cpp  UmpRetriever.cpp  UmpTranslator.cpp  Utility.cpp
tests/: AllCtrlListTestData.hpp  CMakeLists.txt  TestCIMediator.cpp  TestCIMediator.hpp  TestCITransport.cpp  TestCITransport.hpp  TestPropertyRules.cpp  TestPropertyRules.hpp  test_allctrllist_messaging.cpp  test_allctrllist_parser.cpp  test_ci_device_model_properties.cpp  test_ci_factory.cpp  test_final_correlation.cpp  test_integration_property_creation.cpp  test_json.cpp  test_json_complete.cpp  test_json_serialization.cpp  test_main.cpp  test_message_serialization.cpp  test_messenger.cpp  test_midi_ci_converter.cpp  test_midi_ci_device.cpp  test_midi_ci_device_complete.cpp  test_midi_ci_device_extended.cpp  test_profile_facades.cpp  test_profile_facades_complete.cpp  test_profile_manager.cpp  test_property_callback.cpp  test_property_common_converter.cpp  test_property_facades.cpp  test_property_facades_complete.cpp  test_property_fix.cpp  test_property_host_facade_simple.cpp  test_property_json_serialization.cpp  test_request_id_correlation.cpp  test_request_id_correlation_advanced.cpp  test_request_id_debug.cpp  test_request_id_valid_muid.cpp  test_resource_list.cpp  test_standard_properties_ctrlmaplist.cpp  (+6 more)
tools/: CMakeLists.txt
tools/ci-tool/: CMakeLists.txt
tools/ci-tool/include/: CIDeviceManager.hpp  CIDeviceModel.hpp  CIToolRepository.hpp  ClientConnectionModel.hpp  MidiCIProfileState.hpp  MidiDeviceManager.hpp  MutableState.hpp  ObservableModel.hpp
tools/ci-tool/src/: CIDeviceManager.cpp  CIDeviceModel.cpp  CIToolRepository.cpp  ClientConnectionModel.cpp  MidiCIProfileState.cpp  MidiDeviceManager.cpp  main.cpp
tools/flutter-ci-tool/: CMakeLists.txt
tools/flutter-ci-tool/.dart_tool/: package_config.json  package_config_subset
tools/flutter-ci-tool/lib/: main.dart
tools/flutter-ci-tool/native/: ci_tool_wrapper.cpp  ci_tool_wrapper.h
tools/flutter_ci_tool/: .gitignore  CMakeLists.txt  README.md  copy_native_deps.sh  midicci_flutter_gui.podspec  pubspec.yaml  run.sh
tools/flutter_ci_tool/lib/: main.dart
tools/flutter_ci_tool/linux/: CMakeLists.txt
tools/flutter_ci_tool/macos/: midicci_flutter_gui.podspec
tools/flutter_ci_tool/native/: ci_tool_wrapper.cpp  ci_tool_wrapper.h
tools/flutter_ci_tool/test/: widget_test.dart
tools/flutter_ci_tool/windows/: CMakeLists.txt
tools/midicci-app/: CMakeLists.txt  Info.plist.in  android_main.cpp
tools/midicci-app/src/: App.cpp  App.hpp  EmbeddedFont.hpp  keyboard_controller.cpp  keyboard_controller.h  main.cpp  message_logger.cpp  message_logger.h  midi_ci_manager.cpp  midi_ci_manager.h
tools/midicci-app/tests/: test_allctrllist_ordering.cpp  test_allctrllist_timing.cpp  test_blank_titles_issue.cpp  test_midi_feedback_loop.cpp  test_ordering_bug_analysis.cpp  test_properties_parsing.cpp  test_standard_properties.cpp
tools/midicci-keyboard-imgui/: CMakeLists.txt
tools/midicci-keyboard-imgui/src/: main.cpp
tools/qt5-ci-tool/: CMakeLists.txt
tools/qt5-ci-tool/include/: AppModel.hpp  LogWidget.hpp  (+4 more)
tools/react-ui/: .gitignore  index.html  package-lock.json  package.json  tsconfig.electron.json  vite.config.ts  vite.web.config.ts
tools/tooling/: CMakeLists.txt
tools/ump-keyboard/: CMakeLists.txt
(+266 files in other folders)
